# gimpsep-c-imp

./: .gitignore  CMakeLists.txt  Makefile  README.md  gimpsep.cpp  main  main.cpp
assets/: welcome.txt
assets/models/: haarcascade_frontalface.xml
core/: Gimpsep.cpp  Gimpsep.h  GimpsepVideo.cpp  GimpsepVideo.h  gimpsep.cpp  gimpsep.h
utils/: FileReader.cpp  FileReader.h
